more space jazz

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
 <h2>Who is Edgar?</h2>
 <hr>
 <p>Edgar is a cartoon character created for the purpose of demonstrating NFT generation. Edgar has 9 possible backgrounds, clothings, mouths, eyes, and hairs, each represented by the corresponding 0-8 digit in the 5-digit Edgar ID. Edgar shows how each NFT has a unique address, in this case represented by the Edgar ID. Instead of verifying ownership, Edgar ID just verifies that each NFT is unique. Click "Refresh" to see a new Edgar, or rate the Edgar on the page with the star system and click "Submit". You can also input an Edgar ID to see a specific Edgar.</p>
+
+<h2>Tutorials Used</h2>
+<hr>
+<p>I used the following tutorials to help me with the creation of this website.</p>
+
+<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter-function/drop-shadow()">Link.</a><br>
+<a href="https://css-tricks.com/how-to-stack-elements-in-css/">Link.</a><br>
+<a href="https://www.geeksforgeeks.org/how-to-get-the-value-of-text-input-field-using-javascript/">Link.</a><br>
+<a href="https://codepen.io/hesguru/pen/BaybqXv">Link.</a>
 </div>
 
 <footer>
